--- a/index.html
+++ b/index.html
@@ -5,17 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <title>Do List</title>
 </head>
 
 <body>
-    <h1>To Do List</h1>
-    <h3>Nueva Tarea</h3>
-    <input id="inputTarea" type="text"></input>
-    <button id="botonAgregar">Agregar</button>
-    <h4 id="tareasTotal">Total</h4>
-    <h4 id="tareasRealizadas">Realizadas</h4>
-    <table id="listadoTareas"></table>
+    <div class="container bg-light p-2">
+        <h1 class="h1">To Do List</h1>
+        <hr>
+        <h4 class="h4 m-2">Nueva Tarea</h4>
+        <div class="d-flex justify-content-between">
+            <input class="form-control m-1" id="inputTarea" type="text"></input>
+            <button class="btn btn-success m-1" id="botonAgregar">Agregar</button>
+        </div>
+        <div class="d-flex justify-content-between m-2">
+            <div class="p-2">
+                <h6 id="tareasTotal">Total</h6>
+                <h6 id="tareasRealizadas">Realizadas</h6>
+            </div>
+            <table class="table table-sm table-striped w-75" id="listadoTareas"></table>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 
